--- a/notebooks/25_use_Flux_model_generate_image_using_text.ipynb
+++ b/notebooks/25_use_Flux_model_generate_image_using_text.ipynb
@@ -37,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f9e68e6d49c463c8b4ca722d10636e9",
+       "model_id": "82811aec232142d49996fcf8a0196ae5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -57,7 +57,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f2316493a5541b39b21d5aa1dc4526d",
+       "model_id": "9e4954a6da554ff29c6992a22c94fd69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,6 +67,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n"
+     ]
     }
    ],
    "source": [
@@ -159,30 +166,25 @@
     "           ).images[0]\n",
     "# image.show()\n",
     "\n",
-    "image.save(\"sunset.png\")\n"
+    "image.save(\"images/sunset.png\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](sunset.png)"
+    "![](images/sunset.png)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "270298653f0646b0ac277198bc5068a9",
+       "model_id": "7dd30b8852ba4b90810d1a669703a5f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,11 +203,18 @@
     "             guidance_scale=0.0,\n",
     "             num_inference_steps=4,\n",
     "             max_sequence_length=256,\n",
-    "            generator=torch.Generator().manual_seed(42)\n",
+    "            generator=torch.Generator(\"cpu\").manual_seed(42)\n",
     "           ).images[0]\n",
     "# image.show()\n",
     "\n",
-    "image.save(\"main_climbing_tree.png\")"
+    "image.save(\"images/man_climbing_tree.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/man_climbing_tree.png)"
    ]
   }
  ],
